# nmea_server_simulator

./: .gitignore  CMakeLists.txt  README.md  misra_guidelines.txt
include/: nmea_server.h
src/: main.c  nmea_server.c
